@@ -82,8 +82,6 @@ switch if you want to be able to build the NTFS utilities."
 static const char *EXEC_NAME = "ntfsfix";
 static const char *OK        = "OK\n";
 static const char *FAILED    = "FAILED\n";
-static BOOL vol_is_dirty     = FALSE;
-static BOOL journal_is_empty = FALSE;
 
 struct {
 	char *volume;
@@ -247,9 +245,8 @@ static int set_dirty_flag(ntfs_volume *vol)
 {
 	u16 flags;
 
-	if (vol_is_dirty == TRUE)
+	if (NVolWasDirty(vol))
 		return 0;
-
 	ntfs_log_info("Setting required flags on partition... ");
 	/*
 	 * Set chkdsk flag, i.e. mark the partition dirty so chkdsk will run
@@ -264,37 +261,9 @@ static int set_dirty_flag(ntfs_volume *vol)
 		ntfs_log_error("Error setting volume flags.\n");
 		return -1;
 	}
+	vol->flags = flags;
 	ntfs_log_info(OK);
-	vol_is_dirty = TRUE;
-	return 0;
-}
-
-/**
- * set_dirty_flag_mount
- */
-static int set_dirty_flag_mount(ntfs_volume *vol)
-{
-	u16 flags;
-
-	if (vol_is_dirty == TRUE)
-		return 0;
-
-	ntfs_log_info("Setting required flags on partition... ");
-	/*
-	 * Set chkdsk flag, i.e. mark the partition dirty so chkdsk will run
-	 * and fix it for us.
-	 */
-	flags = vol->flags | VOLUME_IS_DIRTY;
-	/* If NTFS volume version >= 2.0 then set mounted on NT4 flag. */
-	if (vol->major_ver >= 2)
-		flags |= VOLUME_MOUNTED_ON_NT4;
-	if (ntfs_volume_write_flags(vol, flags)) {
-		ntfs_log_info(FAILED);
-		ntfs_log_error("Error setting volume flags.\n");
-		return -1;
-	}
-	ntfs_log_info(OK);
-	vol_is_dirty = TRUE;
+	NVolSetWasDirty(vol);
 	return 0;
 }
 
@@ -303,9 +272,8 @@ static int set_dirty_flag_mount(ntfs_volume *vol)
  */
 static int empty_journal(ntfs_volume *vol)
 {
-	if (journal_is_empty == TRUE)
+	if (NVolLogFileEmpty(vol))
 		return 0;
-
 	ntfs_log_info("Going to empty the journal ($LogFile)... ");
 	if (ntfs_logfile_reset(vol)) {
 		ntfs_log_info(FAILED);
@@ -313,7 +281,6 @@ static int empty_journal(ntfs_volume *vol)
 		return -1;
 	}
 	ntfs_log_info(OK);
-	journal_is_empty = TRUE;
 	return 0;
 }
 
@@ -475,13 +442,13 @@ static int fix_mount(void)
 
 	ntfs_log_info("Attempting to correct errors... ");
 
-	dev = ntfs_device_alloc(opt.volume, 0, &ntfs_device_default_io_ops, NULL);
+	dev = ntfs_device_alloc(opt.volume, 0, &ntfs_device_default_io_ops,
+			NULL);
 	if (!dev) {
 		ntfs_log_info(FAILED);
 		ntfs_log_perror("Failed to allocate device");
 		return -1;
 	}
-
 	vol = ntfs_volume_startup(dev, 0);
 	if (!vol) {
 		ntfs_log_info(FAILED);
@@ -490,17 +457,12 @@ static int fix_mount(void)
 		ntfs_device_free(dev);
 		return -1;
 	}
-
 	if (fix_mftmirr(vol) < 0)
 		goto error_exit;
-
-	/* FIXME: Will this fail?  Probably... */
 	if (set_dirty_flag(vol) < 0)
 		goto error_exit;
-
 	if (empty_journal(vol) < 0)
 		goto error_exit;
-
 	ret = 0;
 error_exit:
 	/* ntfs_umount() will invoke ntfs_device_free() for us. */
@@ -550,7 +512,8 @@ int main(int argc, char **argv)
 			exit(1);
 		}
 	}
-
+	/* So the unmount does not clear it again. */
+	NVolSetWasDirty(vol);
 	/* Check NTFS version is ok for us (in $Volume) */
 	ntfs_log_info("NTFS volume version is %i.%i.\n", vol->major_ver,
 			vol->minor_ver);
@@ -558,22 +521,13 @@ int main(int argc, char **argv)
 		ntfs_log_error("Error: Unknown NTFS version.\n");
 		goto error_exit;
 	}
-
-	if (set_dirty_flag_mount(vol) < 0)
-		goto error_exit;
-
-	if (empty_journal(vol) < 0)
-		goto error_exit;
-
 	if (vol->major_ver >= 3) {
-	/* FIXME: If on NTFS 3.0+, check for presence of the usn journal and
-	   disable it (if present) as Win2k might be unhappy otherwise and Bad
-	   Things(TM) could happen depending on what applications are actually
-	   using it for. */
+		/*
+		 * FIXME: If on NTFS 3.0+, check for presence of the usn
+		 * journal and stamp it if present.
+		 */
 	}
-
-	/* FIXME: Should we be marking the quota out of date, too? */
-
+	/* FIXME: We should be marking the quota out of date, too. */
 	/* That's all for now! */
 	ntfs_log_info("NTFS partition %s was processed successfully.\n",
 			vol->dev->d_name);
