@@ -101,7 +101,6 @@ typedef struct {
 	BOOL debug;
 	BOOL noatime;
 	BOOL no_detach;
-	BOOL leave_dirty;
 } ntfs_fuse_context_t;
 
 typedef enum {
@@ -1360,10 +1359,6 @@ exit:
 static void ntfs_fuse_destroy(void *priv __attribute__((unused)))
 {
 	if (ctx->vol) {
-		if (!ctx->leave_dirty && ntfs_volume_write_flags(ctx->vol,
-					ctx->vol->flags & ~VOLUME_IS_DIRTY))
-			ntfs_log_error("Failed to clear volume dirty flag. "
-					"OK, leave it, chkdsk will handle.\n");
 		ntfs_log_info("Unmounting %s (%s)\n", opts.device,
 				ctx->vol->vol_name);
 		if (ntfs_umount(ctx->vol, FALSE))
@@ -1431,17 +1426,6 @@ static int ntfs_fuse_mount(const char *device)
 		return -1;
 	}
 	ctx->vol = vol;
-	if (vol->flags & VOLUME_IS_DIRTY)
-		ctx->leave_dirty = TRUE;
-	else {
-		if (ntfs_volume_write_flags(vol, vol->flags |
-					VOLUME_IS_DIRTY)) {
-			ntfs_log_perror("Failed to set temporary dirty flag");
-			ntfs_umount(vol, FALSE);
-			ctx->vol = NULL;
-			return -1;
-		}
-	}
 	return 0;
 }
 
