@@ -891,10 +891,7 @@ int main(int argc, char *argv[])
 
 	count = move_file(vol, inode, opts.location, 0);
 	if ((count > 0) && (!opts.nodirty)) {
-		if (ntfs_volume_write_flags(vol, vol->flags | VOLUME_IS_DIRTY) <
-				0) {
-			ntfs_log_error("Couldn't mark volume dirty\n");
-		}
+		NVolSetWasDirty(vol);
 		ntfs_log_info("Relocated %lld bytes\n", count);
 	}
 	if (count >= 0)
